--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,9 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #484848;
 }
+#root{
+  overflow: hidden;
+}
 header {
   background-color: #0a192f7e;
   backdrop-filter: blur(50px);
@@ -35,11 +38,8 @@ body {
   background-color: #303f52;
   border-radius: 0.5rem;
   position: relative;
-  filter: grayscale(1);
+  filter: saturate(2);
   transition: 15s;
-}
-.img_about:hover {
-  filter: saturate(2)
 }
 .img_container {
   width: 80%;
