--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #0a192f;
+  background-color: #ffffff;
   font-family: "Poppins", sans-serif;
 }
 .img_about {
