body_update_flex

--- a/src/App.css
+++ b/src/App.css
@@ -40,10 +40,10 @@ header {
 body {
   margin: 0;
   padding: 0;
-  height: 100vh;
+  /* height: 100vh;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
   box-sizing: border-box;
   background-color: #0a192f;
   font-family: "Poppins", sans-serif;
